--- a/app/assets/stylesheets/components/_places_photo.scss
+++ b/app/assets/stylesheets/components/_places_photo.scss
@@ -6,7 +6,6 @@
 }
 
 .show-main {
-
   height: 500px;
   border-radius: 25px;
   background-size: cover;
@@ -14,7 +13,7 @@
 
 }
 
-.show-container {
+.place-container {
   margin-top: -60px;
   background-color: #ffffff;
   border-radius: 25px;
