--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <h1>New Place page</h1>
+  <h1>Add a Place to VenMu</h1>
   <%= render "shared/form", place: @place %>
 </div>
