--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,27 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container home-page d-flex flex-column justify-content-between">
+
+    <div class="row mt-5">
+      <div class="col-sm-12">
+        <h1 class="title">VenMu</h1>
+        <h2 class="sub-title">Your music. New places.</h2>
+      </div>
+    </div>
+
+    <div class="row pb-5">
+      <div class="col-sm-12 d-flex flex-column align-items-center">
+        <%= simple_form_for :search, url: places_path, method: "GET", html: { class: 'form-inline' } do |f| %>
+            <%= f.input :genre, placeholder: "Search by genre...", label: false, input_html: { class: 'search-bar' } %>   
+            <%= button_tag(type: 'submit', class: "btn btn-primary submit-btn") do %>
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+                <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+              </svg>
+          <% end %>
+        <% end %>
+        <h4 class="under-search mt-3">OR pick one!</h4>
+        <svg width="30px" height="30px" style="color:white" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+          </svg>
+      </div>
+    </div>
+  </div>
