--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,4 +3,6 @@
 @import "avatar";
 @import "navbar";
 @import "swiper";
-@import "places_photo"
+@import "places_photo";
+@import "reviews";
+@import "tags";
