--- a/app/assets/stylesheets/components/_places_photo.scss
+++ b/app/assets/stylesheets/components/_places_photo.scss
@@ -1,23 +1,49 @@
+.show-container {
+  height: 100vh;
+  width: 100vw;
+}
+
 .show-photo {
-  height: 100px;
+  height: 16vh;
   border-radius: 25px;
   background-size: cover;
   background-position: center;
 }
 
+.place-info {
+  padding-bottom: 30px;
+}
+
 .show-main {
+  overflow: hidden;
+  position: fixed;
+  top: 0px;
+  z-index: 1;
+  width: 100vw;
   height: 500px;
   border-radius: 25px;
   background-size: cover;
   background-position: center;
+}
 
+.show-description {
+  height: 14vh;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: justify;
+  padding: 0 5px;
 }
 
 .place-container {
-  margin-top: -60px;
+  z-index: 8;
+  position: relative;
+  top: 63vh;
+  margin-top: 0vh;
   background-color: #ffffff;
   border-radius: 25px;
-  padding-top: 20px;
+  padding-top: 25px;
   padding-bottom: 20px;
   height: 100vh;
 }
@@ -27,6 +53,13 @@
   margin-bottom: 5px;
 }
 
-#show-description {
+#show-address {
+  line-height: 14px;
   font-size: 14px;
+  margin-bottom: 2px;
+}
+
+#show-url {
+  font-size: 12px;
+  margin-bottom: 30px;
 }
