--- a/app/assets/stylesheets/components/_swiper.scss
+++ b/app/assets/stylesheets/components/_swiper.scss
@@ -1,11 +1,18 @@
-.swiper-container {
-      width: 100%;
-      height: 100%;
-    }
+.s1 {
+  width: 100%;
+  height: 100%;
+}
+
+.s2 {
+  width: 100%;
+  height: 80%;
+  padding-top: 10px;
+}
+
+
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
+  text-align: left;
   background: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
