--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,9 +19,46 @@
           <% end %>
         <% end %>
         <h4 class="under-search mt-3">OR pick one!</h4>
-        <svg width="30px" height="30px" style="color:white" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <svg type="submit" data-toggle="modal" data-target="#myModal2" width="30px" height="30px" style="color:white" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
           </svg>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade animate light-background" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content animate-bottom mt-5"> 
+        <div class="modal-body">
+          <div class="container">
+            <div class="row d-flex justify-content-around">
+              <div class="col-xs-6 genre-container text-center mb-3" style="background-image: url(https://res.cloudinary.com/detnzqadn/image/upload/v1598479957/descarga_3_mgvflq.jpg)">
+                <%= link_to "ROCK", places_path, class: "genre-title" %>
+              </div>
+              <div class="col-xs-6 genre-container text-center mb-3" style="background-image: url(https://res.cloudinary.com/detnzqadn/image/upload/v1598479957/photo-1514525253161-7a46d19cd819_ndlj2b.jpg)">
+                <%= link_to "POP", places_path, class: "genre-title"%>
+              </div>
+              <div class="col-xs-6 genre-container text-center mb-3" style="background-image: url(https://res.cloudinary.com/detnzqadn/image/upload/v1598479956/photo-1532981434728-a2706e29a80e_m44kil.jpg)">
+                <%= link_to "REGGAETON", places_path, class: "genre-title" %>
+              </div>
+              <div class="col-xs-6 genre-container text-center mb-3" style="background-image: url(https://res.cloudinary.com/detnzqadn/image/upload/v1598479959/photo-1504609813442-a8924e83f76e_kcehsz.jpg)">
+                <%= link_to "LATIN", places_path, class: "genre-title" %>
+              </div>
+              <div class="col-xs-6 genre-container text-center mb-3" style="background-image: url(https://res.cloudinary.com/detnzqadn/image/upload/v1598480137/dan-gold-YW9cBl03LmE-unsplash_toyjlx.jpg)">
+                <%= link_to "CLASSICAL", places_path, class: "genre-title" %>
+              </div>
+              <div class="col-xs-6 genre-container text-center mb-3" style="background-image: url(https://res.cloudinary.com/detnzqadn/image/upload/v1598480096/unnamed_wyze1e.jpg)">
+                <%= link_to "JAZZ", places_path, class: "genre-title" %>
+              </div>
+              <div class="col-xs-6 genre-container text-center mb-3" style="background-image: url(https://res.cloudinary.com/detnzqadn/image/upload/v1598480137/derek-truninger-uLitVttkC7o-unsplash_if201c.jpg)">
+                <%= link_to "SOUL", places_path, class: "genre-title" %>
+              </div>
+              <div class="col-xs-6 genre-container text-center mb-3" style="background-image: url(https://res.cloudinary.com/detnzqadn/image/upload/v1598480137/marcela-laskoski-YrtFlrLo2DQ-unsplash_b74bg3.jpg)">
+                <%= link_to "DANCE", places_path, class: "genre-title" %>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
