--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
   </head>
 
   <body>
-    
-    <%= render partial: 'shared/navbar' unless current_page?(root_path) %>
+
+    <%= render partial: 'shared/navbar' if current_page?(places_path) %>
     <%= render 'shared/flashes' %>
 
     <%= yield %>
